tests/ui/parser/unbalanced-doublequote.stderr
error[E0765]: unterminated double quote string
  --> $DIR/unbalanced-doublequote.rs:3:5
   |
LL | /     "
...  |
LL | | // String Literals
   | |___________________^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0765`.
